EStado del proyecto a 04-04-2025